Optimize to compile with OpenJDK 11:   1. Remove and replace some of unstable/deprecated/unused APIs, e.g.      sun.misc.BASE64Encoder/Decoder are replaced with java.util.Base64   2. Fix a compilation error in generic type deduction.   3. Dynamically set SUNJCE as security provider only when it's available.